# graphql-sqs-serverless-subscriptions

./: .flake8  .gitignore  .tool-versions  README.md  pyproject.toml  template.yaml
deployments/: config_example.toml  scarrera-ggs.toml
docs/: configuration.md  deployment.md
lambdas/asset_subscription_manager/: asset_subscription_manager.py
lambdas/asset_subscription_processor/: asset_subscription_processor.py
lambdas/concerto_token_rotation/: concerto_token_rotation.py
src/: requirements.txt
src/gql_sqs_subscription/: models.py
src/gql_sqs_subscription/aws/: lambda_client.py  secretsmanager.py
src/gql_sqs_subscription/concerto/: api.py  queries.py
src/helper_scripts/: all_assets.py  create_inverter.py  send_subscription.py
