[tool.poetry]
name = "gql-sqs-subscription"
version = "0.1.0"
description = "GraphQL subscription through AWS SQS"
authors = ["Santiago Yepes <scarrera@generacgs.com>"]
readme = "README.md"
packages = [{include = "gql_sqs_subscription"}]

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
