[tool.poetry]
name = "gql-sqs-subscription"
version = "0.1.0"
description = "GraphQL subscription through AWS SQS"
authors = ["Santiago Yepes <scarrera@generacgs.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.27.0"
requests = "^2.31.0"
backoff = "^2.2.1"
ratelimit = "^2.2.1"
pydantic = "^2.0.2"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
